--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ add_library(${PROJECT_NAME}
 	src/basilisk/bs_textures.c
 	src/basilisk/bs_file_mgmt.c
 
+	external/glad/glad.c
 	external/lodepng/lodepng.c
 )
 
@@ -35,5 +36,4 @@ target_link_directories(${PROJECT_NAME}
 target_link_libraries(${PROJECT_NAME}
 	cglm
 	glfw
-	glad
 )
