Minor project structure change

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,14 +3,14 @@ cmake_minimum_required(VERSION 3.23.2)
 project(basilisk)
 
 add_library(${PROJECT_NAME}
-	src/basilisk/bs_wnd.c
-	src/basilisk/bs_mem.c
-	src/basilisk/bs_core.c
-	src/basilisk/bs_math.c
-	src/basilisk/bs_debug.c
-	src/basilisk/bs_models.c
-	src/basilisk/bs_shaders.c
-	src/basilisk/bs_textures.c
+	src/bs_wnd.c
+	src/bs_mem.c
+	src/bs_core.c
+	src/bs_math.c
+	src/bs_debug.c
+	src/bs_models.c
+	src/bs_shaders.c
+	src/bs_textures.c
 
 	external/glad/glad.c
 	external/lodepng/lodepng.c
