Added abstracted rendering

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ add_library(${PROJECT_NAME}
 	src/bs_models.c
 	src/bs_shaders.c
 	src/bs_textures.c
+	src/bs_abstract.c
 
 	external/glad/glad.c
 	external/lodepng/lodepng.c
